# smartshelf-mlops

./: .gitignore  Dockerfile  MONITORING.md  README.md  architecture.md  dashboard_mine.py  docker-compose.monitoring.yml  mlflow.db  next_steps.md  parth.md  present.md  pyproject.toml  requirements.txt  structure.txt
.github/workflows/: cd.yml  ci.yml
data/raw/output_layer1/: calendar.csv  economic_data.csv  product_costs.csv  product_prices.csv  product_suppliers.csv  products.csv  promotion_products.csv  promotions.csv  stores.csv  suppliers.csv
data/raw/output_layer2/: inventory.csv  purchase_order_items.csv  purchase_orders.csv  sales_orders.csv  weather.csv
frontend/: mlflow.db  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/demand/: page.tsx
frontend/app/inventory/: page.tsx
frontend/app/predictions/: page.tsx
frontend/app/pricing/: page.tsx
frontend/app/products/: page.tsx
frontend/app/simulator/: page.tsx
frontend/app/store-pricing/: page.tsx
frontend/components/: KPICard.tsx  Sidebar.tsx
frontend/lib/: api.ts
grafana/dashboards/: smartshelf_dashboard.json
grafana/provisioning/dashboards/: dashboard.yml
keeps/: DB_schema.txt  allpp.ipynb  columnCSV.py  loadDATA_to_DB.py  schema.json
prometheus/: prometheus.yml
src/smartshelf/: config.py
src/smartshelf/api/: dependencies.py  main.py
src/smartshelf/data/: bigquery.py  postgres.py
src/smartshelf/flows/: feature_flow.py  (+1 more)
tests/: test_api.py  test_drift.py  test_features.py  test_models.py
(+52 files in other folders)
